--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(LoadAndMergeMatrices)
 export(MyPlot)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(utils,packageDescription)
