Added image transformation fucntions for objects of class 'magick-image'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,15 @@ export(LoadAndMergeMatrices)
 export(LoadImageData)
 export(LoadSpatialCoordinates)
 export(MyPlot)
+importFrom(dplyr,case_when)
+importFrom(dplyr,mutate)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(magick,image_append)
+importFrom(magick,image_blank)
+importFrom(magick,image_composite)
+importFrom(magick,image_crop)
+importFrom(magick,image_extent)
+importFrom(magick,image_info)
+importFrom(magick,image_rotate)
 importFrom(utils,packageDescription)
