--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Encoding: UTF-8
 LazyData: true
 Depends:
   Seurat (>= 4.0.0),
-  ggplot2 (>= 3.2.0)
+  ggplot2 (>= 3.2.0),
+  rlang (>= 1.0.4)
 VignetteBuilder: knitr
 RoxygenNote: 7.2.1
 Suggests: 
