Added spatial autocorrelation method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,41 @@
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
+export(CorSpatialGenes)
+export(GetSpatialNetwork)
 export(ImageTransform)
 export(ImageTranslate)
 export(LoadAndMergeMatrices)
 export(LoadImageData)
 export(LoadSpatialCoordinates)
 export(MyPlot)
+export(TileImage)
+importFrom(Matrix,rowSums)
 importFrom(dplyr,case_when)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(glue,glue)
 importFrom(magick,image_append)
 importFrom(magick,image_blank)
 importFrom(magick,image_composite)
 importFrom(magick,image_crop)
 importFrom(magick,image_extent)
 importFrom(magick,image_info)
+importFrom(magick,image_read)
 importFrom(magick,image_rotate)
+importFrom(magick,image_scale)
+importFrom(magick,image_transparent)
+importFrom(magick,image_write)
+importFrom(parallel,detectCores)
+importFrom(parallel,mclapply)
+importFrom(rlang,abort)
+importFrom(stats,cor)
+importFrom(tibble,tibble)
+importFrom(tidyr,pivot_wider)
 importFrom(utils,packageDescription)
