--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,28 @@ export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
 export(CorSpatialFeatures)
+export(CreateStaffliObject)
+export(GetImages)
 export(GetSpatialNetwork)
+export(GetStaffli)
+export(ImageInfo)
 export(ImageTransform)
 export(ImageTranslate)
 export(LoadAndMergeMatrices)
 export(LoadImageData)
 export(LoadSpatialCoordinates)
 export(MyPlot)
+export(ReadVisiumData)
 export(TileImage)
+exportClasses(Staffli)
+exportMethods("[[")
+exportMethods("[[<-")
+exportMethods(GetImages)
+exportMethods(ImageInfo)
+exportMethods(show)
+importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
+importFrom(Seurat,CreateSeuratObject)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -40,7 +53,10 @@ importFrom(magick,image_write)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(rlang,abort)
+importFrom(rlang,inform)
 importFrom(stats,cor)
+importFrom(stats,setNames)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,packageDescription)
+importFrom(utils,packageVersion)
