--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(LoadImageData)
 export(LoadSpatialCoordinates)
 export(MyPlot)
 export(ReadVisiumData)
+export(RegionNeighbours.default)
 export(TileImage)
 exportClasses(Staffli)
 exportMethods("[[")
@@ -33,12 +34,14 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(glue,glue)
+importFrom(jsonlite,read_json)
 importFrom(magick,image_append)
 importFrom(magick,image_blank)
 importFrom(magick,image_composite)
