--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Collate:
     'spatial_autocorrelation.R'
     'spatial_network.R'
     'staffli_object.R'
+    'subset_and_merge.R'
     'tile_images.R'
     'transformation_coordinates.R'
     'transformations_image.R'
