Added generic functions MapFeatures (map numeric features) and MapLabels (map categorical features) together with methods for Seurat objects. Also added working examples for both functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,4 +42,5 @@ Collate:
     'tile_images.R'
     'transformation_coordinates.R'
     'transformations_image.R'
+    'visualization_spatial.R'
     'zzz.R'
