--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 S3method(CorSpatialFeatures,default)
 S3method(GetSpatialNetwork,Seurat)
 S3method(GetSpatialNetwork,default)
+S3method(MapFeatures,Seurat)
+S3method(MapFeatures,default)
+S3method(MapLabels,Seurat)
+S3method(MapLabels,default)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
@@ -17,6 +21,8 @@ export(ImageTranslate)
 export(LoadAndMergeMatrices)
 export(LoadImageData)
 export(LoadSpatialCoordinates)
+export(MapFeatures)
+export(MapLabels)
 export(MergeSTData)
 export(MyPlot)
 export(ReadVisiumData)
@@ -32,8 +38,17 @@ exportMethods(show)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,FetchData)
 importFrom(Seurat,RenameCells)
+importFrom(Seurat,WhichCells)
+importFrom(dplyr,across)
+importFrom(dplyr,add_count)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
 importFrom(dplyr,cur_group_id)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -41,11 +56,22 @@ importFrom(dplyr,group_split)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
 importFrom(dplyr,ungroup)
+importFrom(farver,encode_colour)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_gradientn)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_reverse)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_void)
 importFrom(glue,glue)
 importFrom(jsonlite,read_json)
 importFrom(magick,image_append)
@@ -61,8 +87,11 @@ importFrom(magick,image_transparent)
 importFrom(magick,image_write)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
+importFrom(patchwork,wrap_plots)
 importFrom(rlang,abort)
 importFrom(rlang,inform)
+importFrom(rlang,inject)
+importFrom(scales,rescale)
 importFrom(stats,cor)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
@@ -73,3 +102,4 @@ importFrom(tidyr,separate)
 importFrom(tidyr,unite)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(zeallot,"%<-%")
