Updated documentation for LoadImages and ImagePlot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,9 @@ Collate:
     'extdata.R'
     'generics.R'
     'load_data.R'
+    'load_images.R'
     'neighborhood_analysis.R'
+    'plot_images.R'
     'spatial_autocorrelation.R'
     'spatial_network.R'
     'staffli_object.R'
