--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(CorSpatialFeatures,default)
 S3method(GetSpatialNetwork,Seurat)
 S3method(GetSpatialNetwork,default)
+S3method(LoadImages,Seurat)
+S3method(LoadImages,default)
 S3method(MapFeatures,Seurat)
 S3method(MapFeatures,default)
 S3method(MapLabels,Seurat)
@@ -16,10 +18,12 @@ export(GetImages)
 export(GetSpatialNetwork)
 export(GetStaffli)
 export(ImageInfo)
+export(ImagePlot)
 export(ImageTransform)
 export(ImageTranslate)
 export(LoadAndMergeMatrices)
 export(LoadImageData)
+export(LoadImages)
 export(LoadSpatialCoordinates)
 export(MapFeatures)
 export(MapLabels)
@@ -73,7 +77,9 @@ importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
 importFrom(glue,glue)
+importFrom(graphics,layout)
 importFrom(jsonlite,read_json)
+importFrom(magick,geometry_area)
 importFrom(magick,image_append)
 importFrom(magick,image_blank)
 importFrom(magick,image_composite)
@@ -100,6 +106,7 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,unite)
+importFrom(tools,file_ext)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
 importFrom(zeallot,"%<-%")
