--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
+importFrom(tidyr,uncount)
 importFrom(tidyr,unite)
 importFrom(tools,file_ext)
 importFrom(utils,packageDescription)
