--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(MapFeatures,Seurat)
 S3method(MapFeatures,default)
 S3method(MapLabels,Seurat)
 S3method(MapLabels,default)
+S3method(RegionNeighbors,Seurat)
+S3method(RegionNeighbors,default)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
@@ -30,7 +32,7 @@ export(MapLabels)
 export(MergeSTData)
 export(MyPlot)
 export(ReadVisiumData)
-export(RegionNeighbours.default)
+export(RegionNeighbors)
 export(SubsetSTData)
 export(TileImage)
 exportClasses(Staffli)
@@ -54,6 +56,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,cur_group_id)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_split)
@@ -61,11 +64,14 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
+importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(farver,encode_colour)
+importFrom(forcats,fct_drop)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,geom_point)
