--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,15 +51,20 @@ importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
+importFrom(dplyr,count)
 importFrom(dplyr,cur_group_id)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_split)
+importFrom(dplyr,if_all)
+importFrom(dplyr,if_any)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -70,20 +75,29 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
-importFrom(farver,encode_colour)
 importFrom(forcats,fct_drop)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_color_gradientn)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
 importFrom(glue,glue)
+importFrom(grDevices,as.raster)
 importFrom(graphics,layout)
+importFrom(graphics,par)
+importFrom(graphics,title)
 importFrom(jsonlite,read_json)
 importFrom(magick,geometry_area)
 importFrom(magick,image_append)
@@ -97,14 +111,23 @@ importFrom(magick,image_rotate)
 importFrom(magick,image_scale)
 importFrom(magick,image_transparent)
 importFrom(magick,image_write)
+importFrom(methods,as)
+importFrom(methods,new)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
+importFrom(patchwork,inset_element)
 importFrom(patchwork,wrap_plots)
+importFrom(pillar,pillar)
+importFrom(rlang,"!!")
+importFrom(rlang,"%||%")
 importFrom(rlang,abort)
+importFrom(rlang,enquo)
 importFrom(rlang,inform)
 importFrom(rlang,inject)
+importFrom(rlang,warn)
 importFrom(scales,rescale)
 importFrom(stats,cor)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
@@ -114,6 +137,8 @@ importFrom(tidyr,separate)
 importFrom(tidyr,uncount)
 importFrom(tidyr,unite)
 importFrom(tools,file_ext)
+importFrom(utils,install.packages)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
 importFrom(zeallot,"%<-%")
