--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,6 @@ export(LoadSpatialCoordinates)
 export(MapFeatures)
 export(MapLabels)
 export(MergeSTData)
-export(MyPlot)
 export(ReadVisiumData)
 export(RegionNeighbors)
 export(SubsetSTData)
@@ -40,13 +39,17 @@ exportMethods("[[")
 exportMethods("[[<-")
 exportMethods(GetImages)
 exportMethods(ImageInfo)
-exportMethods(show)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,FetchData)
+importFrom(Seurat,Read10X)
+importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
 importFrom(Seurat,WhichCells)
+importFrom(SeuratObject,RowMergeSparseMatrices)
+importFrom(cli,cli_h2)
+importFrom(cli,cli_h3)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
@@ -75,6 +78,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
+importFrom(farver,encode_colour)
 importFrom(forcats,fct_drop)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
@@ -83,6 +87,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_color_gradientn)
@@ -95,6 +100,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
 importFrom(glue,glue)
 importFrom(grDevices,as.raster)
+importFrom(grDevices,hcl)
 importFrom(graphics,layout)
 importFrom(graphics,par)
 importFrom(graphics,title)
