--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(MapLabels,Seurat)
 S3method(MapLabels,default)
 S3method(RegionNeighbors,Seurat)
 S3method(RegionNeighbors,default)
+S3method(RigidTransformImages,default)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
@@ -32,8 +33,10 @@ export(MapLabels)
 export(MergeSTData)
 export(ReadVisiumData)
 export(RegionNeighbors)
+export(RigidTransformImages)
 export(SubsetSTData)
 export(TileImage)
+export(generate_rigid_transform)
 exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
@@ -111,6 +114,8 @@ importFrom(magick,image_blank)
 importFrom(magick,image_composite)
 importFrom(magick,image_crop)
 importFrom(magick,image_extent)
+importFrom(magick,image_flip)
+importFrom(magick,image_flop)
 importFrom(magick,image_info)
 importFrom(magick,image_read)
 importFrom(magick,image_rotate)
