--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(MapLabels,Seurat)
 S3method(MapLabels,default)
 S3method(RegionNeighbors,Seurat)
 S3method(RegionNeighbors,default)
+S3method(RigidTransformImages,Seurat)
 S3method(RigidTransformImages,default)
 export(CoordAndImageTransform)
 export(CoordMirror)
@@ -53,6 +54,7 @@ importFrom(Seurat,WhichCells)
 importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_h3)
+importFrom(cli,cli_rule)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
