--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(MapFeatures,Seurat)
 S3method(MapFeatures,default)
 S3method(MapLabels,Seurat)
 S3method(MapLabels,default)
+S3method(MaskImages,Seurat)
+S3method(MaskImages,default)
 S3method(RegionNeighbors,Seurat)
 S3method(RegionNeighbors,default)
 S3method(RigidTransformImages,Seurat)
@@ -31,6 +33,7 @@ export(LoadImages)
 export(LoadSpatialCoordinates)
 export(MapFeatures)
 export(MapLabels)
+export(MaskImages)
 export(MergeSTData)
 export(ReadVisiumData)
 export(RegionNeighbors)
@@ -113,15 +116,22 @@ importFrom(jsonlite,read_json)
 importFrom(magick,geometry_area)
 importFrom(magick,image_append)
 importFrom(magick,image_blank)
+importFrom(magick,image_blur)
+importFrom(magick,image_channel)
 importFrom(magick,image_composite)
+importFrom(magick,image_connect)
+importFrom(magick,image_convert)
 importFrom(magick,image_crop)
 importFrom(magick,image_extent)
 importFrom(magick,image_flip)
 importFrom(magick,image_flop)
 importFrom(magick,image_info)
+importFrom(magick,image_normalize)
+importFrom(magick,image_quantize)
 importFrom(magick,image_read)
 importFrom(magick,image_rotate)
 importFrom(magick,image_scale)
+importFrom(magick,image_threshold)
 importFrom(magick,image_transparent)
 importFrom(magick,image_write)
 importFrom(methods,as)
@@ -137,6 +147,7 @@ importFrom(rlang,abort)
 importFrom(rlang,enquo)
 importFrom(rlang,inform)
 importFrom(rlang,inject)
+importFrom(rlang,try_fetch)
 importFrom(rlang,warn)
 importFrom(scales,rescale)
 importFrom(stats,cor)
