--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(LoadImageData)
 export(LoadImages)
 export(LoadSpatialCoordinates)
 export(MapFeatures)
+export(MapFeaturesSummary)
 export(MapLabels)
 export(MaskImages)
 export(MergeSTData)
@@ -46,6 +47,9 @@ exportMethods("[[")
 exportMethods("[[<-")
 exportMethods(GetImages)
 exportMethods(ImageInfo)
+import(dplyr)
+import(glue)
+import(rlang)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Seurat,CreateSeuratObject)
@@ -89,9 +93,17 @@ importFrom(dplyr,ungroup)
 importFrom(farver,encode_colour)
 importFrom(forcats,fct_drop)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_fixed)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
@@ -103,9 +115,13 @@ importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_linedraw)
 importFrom(ggplot2,theme_void)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,xlim)
 importFrom(glue,glue)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,hcl)
@@ -139,6 +155,7 @@ importFrom(methods,new)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(patchwork,inset_element)
+importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
 importFrom(pillar,pillar)
 importFrom(rlang,"!!")
