Hide documentation for dot function that are only used internally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ importFrom(stats,cor)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
+importFrom(tibble,column_to_rownames)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
