--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(RigidTransformImages)
 export(SubsetSTData)
 export(TileImage)
 export(generate_rigid_transform)
+export(icp)
 exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
