--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(RegionNeighbors,Seurat)
 S3method(RegionNeighbors,default)
 S3method(RigidTransformImages,Seurat)
 S3method(RigidTransformImages,default)
+S3method(RunAlignment,default)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
@@ -46,10 +47,15 @@ export(RadialDistance)
 export(ReadVisiumData)
 export(RegionNeighbors)
 export(RigidTransformImages)
+export(RunAlignment)
 export(SubsetSTData)
 export(TileImage)
 export(generate_rigid_transform)
 export(icp)
+export(paper)
+export(paperOutput)
+export(prep_image)
+export(renderPaper)
 exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
@@ -57,6 +63,7 @@ exportMethods(GetImages)
 exportMethods(ImageInfo)
 import(dplyr)
 import(glue)
+import(htmlwidgets)
 import(rlang)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
@@ -147,6 +154,7 @@ importFrom(magick,image_composite)
 importFrom(magick,image_connect)
 importFrom(magick,image_convert)
 importFrom(magick,image_crop)
+importFrom(magick,image_data)
 importFrom(magick,image_extent)
 importFrom(magick,image_flip)
 importFrom(magick,image_flop)
@@ -179,6 +187,25 @@ importFrom(rlang,inject)
 importFrom(rlang,try_fetch)
 importFrom(rlang,warn)
 importFrom(scales,rescale)
+importFrom(shiny,actionButton)
+importFrom(shiny,code)
+importFrom(shiny,column)
+importFrom(shiny,fluidPage)
+importFrom(shiny,fluidRow)
+importFrom(shiny,h4)
+importFrom(shiny,h5)
+importFrom(shiny,helpText)
+importFrom(shiny,observe)
+importFrom(shiny,observeEvent)
+importFrom(shiny,p)
+importFrom(shiny,reactiveTimer)
+importFrom(shiny,runApp)
+importFrom(shiny,stopApp)
+importFrom(shiny,strong)
+importFrom(shiny,tableOutput)
+importFrom(shiny,uiOutput)
+importFrom(shinyjs,extendShinyjs)
+importFrom(shinyjs,useShinyjs)
 importFrom(stats,cor)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
@@ -186,6 +213,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,uncount)
