Added AnglePlot and updated spatial-methods examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(RegionNeighbors,default)
 S3method(RigidTransformImages,Seurat)
 S3method(RigidTransformImages,default)
 S3method(RunAlignment,default)
+export(AnglePlot)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
@@ -50,6 +51,7 @@ export(RigidTransformImages)
 export(RunAlignment)
 export(SubsetSTData)
 export(TileImage)
+export(centroid_angles_plot)
 export(generate_rigid_transform)
 export(icp)
 export(paper)
@@ -62,6 +64,7 @@ exportMethods("[[<-")
 exportMethods(GetImages)
 exportMethods(ImageInfo)
 import(dplyr)
+import(ggplot2)
 import(glue)
 import(htmlwidgets)
 import(rlang)
@@ -106,7 +109,6 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
-importFrom(farver,encode_colour)
 importFrom(forcats,fct_drop)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
@@ -177,7 +179,6 @@ importFrom(patchwork,inset_element)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,plot_spacer)
 importFrom(patchwork,wrap_plots)
-importFrom(pillar,pillar)
 importFrom(rlang,"!!")
 importFrom(rlang,"%||%")
 importFrom(rlang,abort)
@@ -195,10 +196,13 @@ importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
 importFrom(shiny,h5)
 importFrom(shiny,helpText)
+importFrom(shiny,hr)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
 importFrom(shiny,p)
 importFrom(shiny,reactiveTimer)
+importFrom(shiny,renderTable)
+importFrom(shiny,renderUI)
 importFrom(shiny,runApp)
 importFrom(shiny,stopApp)
 importFrom(shiny,strong)
@@ -207,6 +211,7 @@ importFrom(shiny,uiOutput)
 importFrom(shinyjs,extendShinyjs)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,cor)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
