--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,25 +19,23 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Depends:
     Seurat (>= 4.0.0),
-    SeuratObject (>= 4.0.0),
-    ggplot2 (>= 3.2.0),
-    rlang (>= 1.0.0)
+    SeuratObject (>= 4.0.0)
 Imports:
-    methods,
     dplyr (>= 1.0.0),
-    forcats (>= 0.5.0),
+    ggplot2 (>= 3.3.0),
+    cli, 
+    forcats, 
+    jsonlite, 
+    rlang, 
+    tibble, 
+    tidyr,
+    methods,
     glue,
-    jsonlite (>= 1.8.0),
     magick (>= 2.7.0),
     Matrix (>= 1.4),
     patchwork (>= 1.1.0),
     scales (>= 1.2.0),
-    tibble,
-    tidyr,
     zeallot,
-    pillar (>= 1.8.0),
-    cli (>= 3.3.0),
-    farver (>= 2.1.0),
     dbscan (>= 1.1.0),
     RColorBrewer,
     shiny,
@@ -47,6 +45,10 @@ Imports:
     reactR
 RoxygenNote: 7.2.1
 Suggests: 
+    farver,
+    tidygraph,
+    leaflet,
+    viridis,
     testthat,
     data.table,
     BiocManager (>= 1.30.18),
@@ -65,6 +67,7 @@ Collate:
     'neighborhood_analysis.R'
     'plot_images.R'
     'radial_distance.R'
+    'radial_distance_plot.R'
     'rigid_transform.R'
     'rigid_transform_manual.R'
     'spatial_autocorrelation.R'
