--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ S3method(RegionNeighbors,default)
 S3method(RigidTransformImages,Seurat)
 S3method(RigidTransformImages,default)
 S3method(RunAlignment,default)
+S3method(RunLocalG,Seurat)
+S3method(RunLocalG,default)
 export(AnglePlot)
 export(CoordAndImageTransform)
 export(CoordMirror)
@@ -49,6 +51,7 @@ export(ReadVisiumData)
 export(RegionNeighbors)
 export(RigidTransformImages)
 export(RunAlignment)
+export(RunLocalG)
 export(SubsetSTData)
 export(TileImage)
 export(centroid_angles_plot)
@@ -70,6 +73,8 @@ import(htmlwidgets)
 import(rlang)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
+importFrom(Seurat,AddMetaData)
+importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,FetchData)
 importFrom(Seurat,Read10X)
@@ -213,9 +218,12 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stats,cor)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stats,pnorm)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
+importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
