Updated NAMESPACE and docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,15 +71,18 @@ import(ggplot2)
 import(glue)
 import(htmlwidgets)
 import(rlang)
+importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,FetchData)
+importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Read10X)
 importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
+importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
 importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(cli,cli_h2)
