--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,3 +5,6 @@ notebooks/
 package.json
 webpack.config.js
 yarn.lock
+inst/extdata/mousebrain/filtered_feature_barcode_matrix_full.h5
+inst/extdata/mousecolon/filtered_feature_barcode_matrix_full.h5
+presentations/
