Add MapLabelsSummary export and manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(LoadSpatialCoordinates)
 export(MapFeatures)
 export(MapFeaturesSummary)
 export(MapLabels)
+export(MapLabelsSummary)
 export(MaskImages)
 export(MergeSTData)
 export(RadialDistance)
