--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(RigidTransformImages,default)
 S3method(RunAlignment,default)
 S3method(RunLocalG,Seurat)
 S3method(RunLocalG,default)
+S3method(RunNNLS,Seurat)
+S3method(RunNNLS,default)
 export(AnglePlot)
 export(CoordAndImageTransform)
 export(CoordMirror)
@@ -53,6 +55,7 @@ export(RegionNeighbors)
 export(RigidTransformImages)
 export(RunAlignment)
 export(RunLocalG)
+export(RunNNLS)
 export(SubsetSTData)
 export(TileImage)
 export(centroid_angles_plot)
@@ -73,12 +76,16 @@ import(glue)
 import(rlang)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
+importFrom(Matrix,rowMeans)
 importFrom(Matrix,rowSums)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateAssayObject)
+importFrom(Seurat,CreateDimReducObject)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,FetchData)
 importFrom(Seurat,GetAssayData)
+importFrom(Seurat,Idents)
 importFrom(Seurat,Read10X)
 importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
