Fixed cran checks for RunNNLS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
+importFrom(Seurat,`DefaultAssay<-`)
 importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_h3)
