--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Suggests:
     SpatialExperiment (>= 1.6.0),
     MatrixExtra,
     htmlwidgets,
-    htmltools
+    htmltools,
+    RcppML
 Collate: 
     'STUtility2-package.R'
     'checks.R'
