--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,3 +9,4 @@ yarn.lock
 inst/extdata/mousebrain/filtered_feature_barcode_matrix_full.h5
 inst/extdata/mousecolon/filtered_feature_barcode_matrix_full.h5
 presentations/
+mousebrain/
