--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 notebooks/seeded_nmf_tests.qmd
 presentations/
 notebooks/nmf/seeded_nmf_tests.qmd
-mousebrain/
+notebooks/nmf/mousebrain/
+notebooks/nmf/kidney/
