--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,14 @@ S3method(RunLocalG,Seurat)
 S3method(RunLocalG,default)
 S3method(RunNNLS,Seurat)
 S3method(RunNNLS,default)
+export(AdjustTissueCoordinates)
 export(AnglePlot)
 export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
 export(CorSpatialFeatures)
 export(CreateStaffliObject)
+export(CutSpatialNetwork)
 export(DisconnectRegions)
 export(GetImages)
 export(GetSpatialNetwork)
@@ -59,11 +61,14 @@ export(RunNNLS)
 export(SubsetSTData)
 export(TileImage)
 export(centroid_angles_plot)
+export(export_graph)
+export(file_server)
 export(generate_rigid_transform)
 export(icp)
-export(paper)
+export(osdduOutput)
 export(paperOutput)
 export(prep_image)
+export(renderOsddu)
 export(renderPaper)
 exportClasses(Staffli)
 exportMethods("[[")
@@ -96,6 +101,7 @@ importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_h3)
 importFrom(cli,cli_rule)
+importFrom(cli,col_br_magenta)
 importFrom(dbscan,kNN)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
@@ -163,6 +169,7 @@ importFrom(graphics,layout)
 importFrom(graphics,par)
 importFrom(graphics,title)
 importFrom(jsonlite,read_json)
+importFrom(jsonlite,write_json)
 importFrom(magick,geometry_area)
 importFrom(magick,image_append)
 importFrom(magick,image_blank)
@@ -208,6 +215,7 @@ importFrom(shiny,code)
 importFrom(shiny,column)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
+importFrom(shiny,h2)
 importFrom(shiny,h4)
 importFrom(shiny,h5)
 importFrom(shiny,helpText)
